--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="apply_now">Apply now</string>
+    <string name="salary">Salary</string>
+    <string name="type">Type</string>
+    <string name="location">Location</string>
+    <string name="requirements">Requirements</string>
 </resources>
