feat: roadmap material page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="recommend">Recommendations</string>
     <string name="title_activity_new">NewActivity</string>
     <string name="vacancies">Vacancies</string>
+    <string name="resources">Resources for learning</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
