--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="type">Type</string>
     <string name="location">Location</string>
     <string name="requirements">Requirements</string>
+    <string name="invalid_e_mail_or_password">Invalid e-mail or password</string>
 </resources>
