--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,11 @@
     <string name="vacancies">Vacancies</string>
     <string name="job_detail">Job Detail</string>
     <string name="resources">Resources for learning</string>
+    <string name="internship">Internship</string>
+    <string name="full_time">Full Time</string>
+    <string name="part_time">Part Time</string>
+    <string name="project_work">Project Work</string>
+    <string name="volunteering">Volunteering</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
