--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,9 @@
     <string name="are_you_sure_to_log_out_of_your_account">Are you sure to log out of your account?</string>
     <string name="leave">Leave</string>
     <string name="cancel">Cancel</string>
+    <string name="resent_code_in">Resent code in</string>
+    <string name="verify">Verify</string>
+    <string name="save">Save</string>
+    <string name="_7777777777">+7777777777</string>
+    <string name="example_gmail_com">example@gmail.com</string>
 </resources>
